// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Component Snapshots should match snapshots as primary themed 1`] = `
<div
  className="test-component test-component-primary"
>
  <h1
    className="heading"
  >
    I'm the test component
  </h1>
  <h2>
    Made with love by Harvey
  </h2>
</div>
`;

exports[`Test Component Snapshots should match snapshots as secondary themed 1`] = `
<div
  className="test-component test-component-secondary"
>
  <h1
    className="heading"
  >
    I'm the test component
  </h1>
  <h2>
    Made with love by Harvey
  </h2>
</div>
`;
